<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Texto 1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Texto 2" />

    <Button
        android:id="@+id/compararButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comparar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="18sp" />
</LinearLayout>
